Fix: like button covered by image

--- a/src/components/UI/Buttons/ButtonLike/_buttonLike.scss
+++ b/src/components/UI/Buttons/ButtonLike/_buttonLike.scss
@@ -45,7 +45,6 @@
 
   &__notification {
     position: absolute;
-    z-index: 100;
     top: 115%;
     left: -52px;
     width: max-content;
