--- a/src/components/UI/Cards/_cards.scss
+++ b/src/components/UI/Cards/_cards.scss
@@ -18,7 +18,7 @@
     justify-content: center;
     gap: 10px;
     inset-inline: 0;
-    z-index: 1;
+    z-index: 2;
     background-color: rgba($color-grey-dark, 1);
   }
 
